# 3dscenegraphs

./: README.md
fake_camera/: package.xml  setup.cfg  setup.py
fake_camera/fake_camera/: frames_2024-09-08_12.40.48.gv  image_publisher.py
fake_camera/fake_camera/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
yolov8_ros/yolov8_bringup/launch/: yolov8_3d.launch.py
yolov8_ros/yolov8_msgs/: CMakeLists.txt  package.xml
yolov8_ros/yolov8_msgs/msg/: MergedDetectionArray.msg
yolov8_ros/yolov8_ros/: setup.py
yolov8_ros/yolov8_ros/yolov8_ros/: class_position.py  debug_node.py  detect_3d_node.py  frame_tf_node.py  hand_node.py  topic_merger.py  tracking_node.py  yolov8_node.py  zed_frame_listener.py
